<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuéBus</string>
    <string name="action_settings">Ajustes</string>
    <string name="no_bus">No hay autobuses en esta parada</string>
    <string name="audio_ex">Desmarcar para desactivar mensajes por voz</string>
    <string name="audio">Activar audio</string>
    <string name="audio_settings">AJUSTES AUDIO</string>
    <string name="short_mode_ex">Activar modo resumido de indicaciones</string>
    <string name="short_mode">Modo resumido</string>
    <string name="stt_mode_ex">Control hablado o por gestos</string>
    <string name="stt_mode">Modo hablado</string>
    <string name="speed">Velocidad habla</string>
    <string name="speed_ex">Seleccionar velocidad de narración</string>
    <string name="autobus">Autobús</string>
    <string name="action_help">Ayuda</string>
    <string name="low">Baja</string>
    <string name="medium">Media</string>
    <string name="high">Alta</string>
    <string name="very_high">Muy alta</string>
    <string name="inherit">Heredar</string>
    <string name="install_TTS">Instalar síntesis de voz en Android</string>
    <string name="gijon">Información proporcionada por el Ayuntamiento de Gijón</string>
    <string name="gijon_logo">Logo de Gijón</string>
    <string name="welcome">Bienvenido a QuéBus, pulse para empezar</string>
    <string name="instr">Doble Click para volver a empezar y doble click manteniendo pulsado para decir la línea deseada</string>
    <string name="instr_next">Doble Click para volver a empezar y doble click manteniendo pulsado para actualizar</string>    
    
    
</resources>
